# fffb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plugin.cpp
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
include/fffb/device/: manager.hpp  report.hpp
include/fffb/force/: simulator.hpp  simulator.hxx
include/fffb/hid/: device.hxx  report.hxx
include/fffb/joy/: protocol.hxx  wheel.hxx
include/fffb/util/: log.hpp  log.hxx  types.hpp  types.hxx  version.hpp  version.hxx
include/fffb/wheel/: controller.hpp  protocol.hpp
source/: flt.cpp
source/fffb/: fffb.cxx
source/fffb/scs/: fffb_scs.cpp
